# rank_preserving_calibration

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  verify_implementation.py
.github/workflows/: adjacent_repo_recommender.yaml  ci.yml  docs.yml  python-publish.yml  release.yml
docs/: Makefile  make.bat
docs/_build/doctrees/: api.doctree  changelog.doctree  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  theory.doctree
docs/_build/html/: .buildinfo  api.html  changelog.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  theory.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/rank_preserving_calibration/: calibration.html  nearly.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  theory.rst.txt
docs/source/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
examples/: __init__.py  data_helpers.py  data_utils.py  example.ipynb  example_usage.ipynb  focused_nearly_isotonic_example.py  nearly_isotonic_demo.py  realistic_nearly_isotonic_example.py
optimal_cutoffs/: __init__.py  optimizers.py
rank_preserving_calibration/: __init__.py  calibration.py  calibrator.py  metrics.py  nearly.py  utils.py
tests/: test_basic.py  test_core_algorithms.py  test_entropy.py  test_mathematical_correctness.py  test_mathematical_guarantees.py  test_nearly_isotonic.py  test_optimal_threshold.py  test_property_based.py  test_rng.py  test_ties_and_edge_cases.py  test_utilities.py
